--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Ryan Ward
 email: ryan@fromlawtodata.com
 author: Ryan Ward
 description: "A place for my thoughts and ideas."
-baseurl: ""
+baseurl: https://ryanward-io.github.io/ryanward-io.github.io/
 date_format: "%-d %b %Y"
 
 # Google services
