--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 ## Site settings                    ##
 ######################################
 title: Ryan Ward
-email: ryan@fromlawtodata.com
+email: wardyryan1@gmail.com
 author: Ryan Ward
 description: "A place for my thoughts and ideas."
 baseurl: https://ryanward-io.github.io/
